--- a/ChameleonVoice/index.html
+++ b/ChameleonVoice/index.html
@@ -70,17 +70,17 @@
 
     </tr>
     <tr>
-          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0009_000011.wav"></audio></td>
-	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/pavits_vl_0009_000361.wav"></audio></td>
-	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_000361.wav"></audio></td>
-	  <td style="font-size:95%">Who is been repeating all that hard stuff to you?</td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0016_000038.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/gen_0016_000388.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0016_000388.wav"></audio></td>
+	  <td style="font-size:95%">Hold up my chin, slow and solid.</td>
 
     </tr>
     <tr>
-          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0009_000013.wav"></audio></td>
-	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/pavits_vl_0009_000363.wav"></audio></td>
-	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_000363.wav"></audio></td>
-	  <td style="font-size:95%">She is now choosing skirt to wear.</td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0014_000032.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/gen_0014_000382.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0014_000382.wav"></audio></td>
+	  <td style="font-size:95%">Who is been repeating all that hard stuff to you?</td>
 
     </tr>
 		
@@ -108,10 +108,16 @@
 	  <td style="font-size:95%">妇女节快乐，我永远爱你，妈妈。(English: Happy Women's Day, I will always love you, Mom.)</td>
        </tr>
     <tr>
-          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0009_000013.wav"></audio></td>
-	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2hap/pavits_vl_0009_000713.wav"></audio></td>
-	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_000713.wav"></audio></td>
-	  <td style="font-size:95%">The name really is the aged aged man.</td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0016_000031.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2hap/gen_0016_000731.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0016_000731.wav"></audio></td>
+	  <td style="font-size:95%">All smile were real and the happier the more sincere.</td>
+    </tr>
+        <tr>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0012_000025.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2hap/gen_0012_000725.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0012_000725.wav"></audio></td>
+	  <td style="font-size:95%">She is now choosing skirt to wear.</td>
     </tr>
 		
     <tr>
@@ -145,6 +151,27 @@
 	  <td style="font-size:95%">他一定是一眼就被你迷住了。(English: He must have been captivated by you at first sight.)</td>
 
     </tr>
+        <tr>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0011_000028.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sad/gen_0011_001078.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0011_001078.wav"></audio></td>
+	  <td style="font-size:95%">She had said, so that one could keep up a conversation!</td>
+
+    </tr>
+            <tr>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0013_000025.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sad/gen_0013_001075.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0013_001075.wav"></audio></td>
+	  <td style="font-size:95%">She is now choosing skirt to wear.</td>
+
+    </tr>
+                <tr>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0014_000045.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sad/gen_0014_001095.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0014_001095.wav"></audio></td>
+	  <td style="font-size:95%">The nastiest things they saw were the cobwebs.</td>
+
+    </tr>
 		
     <tr>
     	<th colspan=8 style="font-size:80%" centering><h8>Neutral-to-Surprise</th>
@@ -164,17 +191,24 @@
 
     </tr>
     <tr>
-          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0009_000011.wav"></audio></td>
-	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/pavits_vl_0009_001411.wav"></audio></td>
-	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001411.wav"></audio></td>
-	  <td style="font-size:95%">She had said, so that one could keep up a conversation!</td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0016_000029.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/gen_0016_001429.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0016_001429.wav"></audio></td>
+	  <td style="font-size:95%">Rat came and replied on the leaves.</td>
 
     </tr>
     <tr>
-          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0009_000013.wav"></audio></td>
-	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/pavits_vl_0009_001413.wav"></audio></td>
-	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001413.wav"></audio></td>
-	  <td style="font-size:95%">You are not a runaway, who are you?</td>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0016_000046.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/gen_0016_001446.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0016_001446.wav"></audio></td>
+	  <td style="font-size:95%">They'd never know I'd regular ran away.</td>
+
+    </tr>
+        <tr>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0020_000047.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/gen_0020_001447.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0020_001447.wav"></audio></td>
+	  <td style="font-size:95%">Please excuse me.</td>
 
     </tr>
 		
@@ -213,7 +247,17 @@
 	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001405.wav"></audio></td>
 	  <td style="font-size:95%">我们乘船漂游了三峡，真是刺激。(English: We took a boat trip through the Three Gorges, which was truly thrilling.)</td>
 
-    </tr>		
+    </tr>
+    <tr>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0016_000038.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/mul-spk/gen_0016_000388.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0016_000388.wav"></audio></td>
+            <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0017_000038.wav"></audio></td>
+	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/mul-spk/gen_0017_000388.wav"></audio></td>
+	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0017_000388.wav"></audio></td>
+	  <td style="font-size:95%">Hold up my chin, slow and solid.</td>
+
+    </tr>	
     </tbody>
 </table>
 
