--- a/ChameleonVoice/index.html
+++ b/ChameleonVoice/index.html
@@ -257,6 +257,16 @@
 	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0017_000388.wav"></audio></td>
 	  <td style="font-size:95%">Hold up my chin, slow and solid.</td>
 
+    </tr>
+	 <tr>
+          <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0012_000025.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/mul-spk/gen_0012_000725.wav"></audio></td>
+	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0012_000725.wav"></audio></td>
+            <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0013_000025.wav"></audio></td>
+	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/mul-spk/gen_0013_000725.wav"></audio></td>
+	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0013_000725.wav"></audio></td>
+	  <td style="font-size:95%">She is now choosing skirt to wear.</td>
+
     </tr>	
     </tbody>
 </table>
