--- a/ChameleonVoice/index.html
+++ b/ChameleonVoice/index.html
@@ -26,7 +26,7 @@
     <h1 id=""><center>ChameleonVoice: A Contextual Prosody Perception Network for Emotional Voice Conversion</center></h1>
     <center> Tianhua Qi<sup>1,2</sup>, Cheng Lu<sup>1,2</sup>, Yuan Zong<sup>1,2</sup>, Wenming Zheng<sup>1,2</sup>, Björn W. Schuller<sup>3,4</sup></center>
     <center> <sup>1</sup> School of Biological Science and Medical Engineering, Southeast University, China</center>
-    <center> <sup>2</sup> Key Laboratory of Child Development and Learning Science (Ministry of Education), China</center>
+    <center> <sup>2</sup> Key Laboratory of Child Development and Learning Science (Southeast University), Ministry of Education, China</center>
     <center> <sup>3</sup> Chair of Health Informatics (CHI), Technical University of Munich, Germany</center>
     <center> <sup>4</sup> Group on Language, Audio, & Music (GLAM), Imperial College London, U.K.</center>
 
