--- a/ChameleonVoice/index.html
+++ b/ChameleonVoice/index.html
@@ -51,6 +51,7 @@
         <td style="text-align: center; width: 100px;" rowspan=1><strong>ChameleonVoice (proposed)<strong></td>
 	<td style="text-align: center; width: 100px;" rowspan=1><strong>Target<strong></td>
 	<td style="text-align: center; width: 100px;" rowspan=1><strong>Text<strong></td>
+    <td style="text-align: center; width: 750px;" rowspan=1><strong>Analysis<strong></td>
     </tr>
 		
     <tr>
@@ -61,12 +62,14 @@
 	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/gen_0009_000363.wav"></audio></td>
 	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_000363.wav"></audio></td>
     	<td style="font-size:95%">周末的我，只忙着陪你。(English: On the weekend, I'm only busy with accompanying you.)</td>
+      <td style="font-size:95%">The angry affect is conveyed through attenuated intensity and a pause after 'I', followed by pitch elevation on 'only busy with' and increased loudness on 'accompanying you', producing a restrained yet resentful prosodic pattern.</td>
     </tr>
     <tr>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0009_000019.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/gen_0009_000369.wav"></audio></td>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_000369.wav"></audio></td>
 	  <td style="font-size:95%">不就是你嘛，为什么要偷笑来？(English: Isn't it just you? Why are you sneaking a laugh?)</td>
+      <td style="font-size:95%">The accusatory meaning is underscored by stressed pitch accents on 'Isn't' and 'Why,' accelerated rhythm on 'sneaking a laugh,' falling intonation in the first clause and rising intonation in the second, yielding a sharp and indignant affect.</td>
 
     </tr>
     <tr>
@@ -74,6 +77,7 @@
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/gen_0016_000388.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0016_000388.wav"></audio></td>
 	  <td style="font-size:95%">Hold up my chin, slow and solid.</td>
+      <td style="font-size:95%">The forceful meaning is expressed by sharp pitch accents on 'Hold up' and 'slow,' rising intonation in the initial clause, and decelerated articulation with falling intonation on 'solid,' yielding a firm, authoritative affect.</td>
 
     </tr>
     <tr>
@@ -81,6 +85,7 @@
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2ang/gen_0014_000382.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0014_000382.wav"></audio></td>
 	  <td style="font-size:95%">Who is been repeating all that hard stuff to you?</td>
+      <td style="font-size:95%">The interrogative anger is intensified by accelerated speech rate and stress on 'repeating,' 'stuff,' and 'you,' resulting in elevated intensity and an aggressive prosodic profile.</td>
 
     </tr>
 		
@@ -92,6 +97,7 @@
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2hap/gen_0009_000701.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_000701.wav"></audio></td>
 	  <td style="font-size:95%">打远一看，它们的确很是美丽。(English: At a distance, they indeed appear very beautiful.)</td>
+      <td style="font-size:95%">The appreciative meaning is underscored by overall rising intonation, sharp pitch accents on 'indeed' and 'very,' and a light, flowing prosody on 'beautiful,' yielding a relaxed and cheerful affect.</td>
 
     </tr>
     <tr>
@@ -99,6 +105,7 @@
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2hap/gen_0009_000702.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_000702.wav"></audio></td>
 	  <td style="font-size:95%">英国的哲学家曾经说过。(English: The British philosopher once said.)</td>
+      <td style="font-size:95%">The informative, happy affect is bolstered by a falling-rising intonation contour, pitch accents on 'British' and 'once said,' and a pause before 'once said,' yielding a lively, engaging prosodic expression.</td>
 
     </tr>
     <tr>
@@ -106,18 +113,21 @@
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2hap/gen_0009_000711.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_000711.wav"></audio></td>
 	  <td style="font-size:95%">妇女节快乐，我永远爱你，妈妈。(English: Happy Women's Day, I will always love you, Mom.)</td>
+      <td style="font-size:95%">The joyful affect is amplified by overall rising intonation, accelerated speech rate, a pause after 'Happy Women’s Day,' and pitch accents on 'I will always love you,' yielding a warm, affectionate prosodic expression.</td>
        </tr>
     <tr>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0016_000031.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2hap/gen_0016_000731.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0016_000731.wav"></audio></td>
 	  <td style="font-size:95%">All smile were real and the happier the more sincere.</td>
+      <td style="font-size:95%">The positive affect is solidified by dynamic intonation, multiple pitch accents on 'real,' 'happier,' and 'sincere,' and a pause before 'the more sincere,' yielding a lively and heartfelt prosodic expression.</td>
     </tr>
         <tr>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0012_000025.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2hap/gen_0012_000725.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0012_000725.wav"></audio></td>
 	  <td style="font-size:95%">She is now choosing skirt to wear.</td>
+      <td style="font-size:95%">The cheerful affect is heightened by a rising-falling intonation, increased loudness, and stress on 'now choosing skirt to wear,' yielding an energetic prosodic pattern.</td>
     </tr>
 		
     <tr>
@@ -128,6 +138,7 @@
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sad/gen_0009_001058.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001058.wav"></audio></td>
 	  <td style="font-size:95%">沙尘暴好像给每个人都带来了麻烦！(English: The sandstorm seems to have brought trouble to everyone!)</td>
+      <td style="font-size:95%">The sad affect is bolstered by a pervasive falling intonation and decelerated speech rate; the inclusion of a pause after 'The sandstorm' and the onset of vocal tremor yield a somber and lugubrious acoustic texture.</td>
 
     </tr>
     <tr>
@@ -135,6 +146,7 @@
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sad/gen_0009_001061.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001061.wav"></audio></td>
 	  <td style="font-size:95%">妇女节快乐，我永远爱你，妈妈。(English: Happy Women's Day, I will always love you, Mom.)</td>
+      <td style="font-size:95%">A blend of sadness and affection is channeled through the initial falling intonation on 'Happy Women’s Day,' succeeded by a slowed, rising contour with intermittent pauses in 'I will always love you, Mom,' creating a poignant prosodic delivery.</td>
 
     </tr>
     <tr>
@@ -142,6 +154,7 @@
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sad/gen_0009_001063.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001063.wav"></audio></td>
 	  <td style="font-size:95%">周末的我，只忙着陪你。(English: On the weekend, I'm only busy with accompanying you.)</td>
+      <td style="font-size:95%">The aggrieved quality of the sadness manifests in the stable intonation of 'On the weekend,' followed by dynamically modulated, slow speech that emphasizes 'I’m only busy with accompanying you,' resulting in a supplicating, wistful prosodic stance.</td>
 
     </tr>
     <tr>
@@ -149,6 +162,7 @@
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sad/gen_0009_001066.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001066.wav"></audio></td>
 	  <td style="font-size:95%">他一定是一眼就被你迷住了。(English: He must have been captivated by you at first sight.)</td>
+      <td style="font-size:95%">A resentful undertone underscores the sadness, driven by continuous falling intonation and deliberate, slowed articulation on 'been captivated by you,' while emphatic stress on 'must' and 'at first sight' yields a bitter, reproachful prosodic profile.</td>
 
     </tr>
         <tr>
@@ -156,6 +170,7 @@
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sad/gen_0011_001078.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0011_001078.wav"></audio></td>
 	  <td style="font-size:95%">She had said, so that one could keep up a conversation!</td>
+      <td style="font-size:95%">The subdued nature of the affect is intensified by a consistently falling intonation, sluggish speech rate, and diminished loudness on 'could keep up a conversation,' producing a fatigued and despondent expression.</td>
 
     </tr>
             <tr>
@@ -163,6 +178,7 @@
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sad/gen_0013_001075.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0013_001075.wav"></audio></td>
 	  <td style="font-size:95%">She is now choosing skirt to wear.</td>
+      <td style="font-size:95%">This subdued sadness finds expression in a predominantly level, slightly rising intonation, where emphatic stress on 'now choosing skirt' gives way to fading loudness on 'to wear,' yielding a muted and elegiac prosodic quality.</td>
 
     </tr>
                 <tr>
@@ -170,6 +186,7 @@
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sad/gen_0014_001095.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0014_001095.wav"></audio></td>
 	  <td style="font-size:95%">The nastiest things they saw were the cobwebs.</td>
+      <td style="font-size:95%">The weary affect is evidenced by a near-level, slightly falling intonation and a speech rate indicative of lethargy; the gradual decay in volume toward the end results in a listless and stoic prosody.</td>
 
     </tr>
 		
@@ -181,6 +198,7 @@
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/gen_0009_001401.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001401.wav"></audio></td>
 	  <td style="font-size:95%">打远一看，它们的确很是美丽。(English: At a distance, they indeed appear very beautiful.)</td>
+      <td style="font-size:95%">The surprised affect is underscored by a continuously rising intonation peaking on 'very beautiful,' paired with a pause after 'At a distance,' yielding a compelling, incredulous rhythmic contour.</td>
 
     </tr>
     <tr>
@@ -188,6 +206,7 @@
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/gen_0009_001414.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0009_001414.wav"></audio></td>
 	  <td style="font-size:95%">谁你也不认识，我很乐意帮助你。(English: You don't know anybody, but I'm more than willing to help you.)</td>
+      <td style="font-size:95%">This sense of surprise is conveyed through falling intonation on the declarative 'You don’t know anybody,' contrasted with a rising intonation on 'but I’m more than willing to help you,' creating an inviting, animated vocal stance.</td>
 
     </tr>
     <tr>
@@ -195,6 +214,7 @@
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/gen_0016_001429.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0016_001429.wav"></audio></td>
 	  <td style="font-size:95%">Rat came and replied on the leaves.</td>
+      <td style="font-size:95%">A surprised affect is amplified by dynamic, undulating intonation, with a pronounced rise on 'replied on the leaves,' producing a vibrant, theatrical prosodic delivery.</td>
 
     </tr>
     <tr>
@@ -202,6 +222,7 @@
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/gen_0016_001446.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0016_001446.wav"></audio></td>
 	  <td style="font-size:95%">They'd never know I'd regular ran away.</td>
+      <td style="font-size:95%">The feeling of astonishment is driven by a falling-rising intonation and accelerated speech rate, with a sharp pitch peak on the final phrase, resulting in a jolting, high-velocity acoustic profile.</td>
 
     </tr>
         <tr>
@@ -209,6 +230,7 @@
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/neu2sur/gen_0020_001447.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0020_001447.wav"></audio></td>
 	  <td style="font-size:95%">Please excuse me.</td>
+      <td style="font-size:95%">The surprise manifests through rising intonation and a pause after 'Please,' where the elongated stress on 'excuse me' yields a deliberate, high-alert communicative tone.</td>
 
     </tr>
 		
@@ -257,8 +279,8 @@
 	<td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0017_000388.wav"></audio></td>
 	  <td style="font-size:95%">Hold up my chin, slow and solid.</td>
 
-    </tr>
-	 <tr>
+    </tr>	
+        <tr>
           <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/source/0012_000025.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/mul-spk/gen_0012_000725.wav"></audio></td>
 	  <td style="text-align: center"><audio style="width: 150px;" controls="" preload="none" src="samples/target/0012_000725.wav"></audio></td>
